--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        />
+        <link
             href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap"
             rel="stylesheet"
         />
@@ -19,7 +23,9 @@
         <title>RH_Portfolio</title>
     </head>
     <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <!--Gradient Background-->
+        <div class="background"></div>
+        <div class="gradientBackground"></div>
         <div id="root"></div>
     </body>
 </html>
