--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
     </head>
     <body>
         <!--Gradient Background-->
-        <div class="background"></div>
-        <div class="gradientBackground"></div>
-        <div id="root"></div>
+        <div id="background"></div>
+        <div id="gradientBackground"></div>
+        <main id="root"></main>
     </body>
 </html>
