style adjusted to BEM

--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,5 @@
 
         <title>RH_Portfolio</title>
     </head>
-    <body>
-        <!--Gradient Background-->
-        <div id="background"></div>
-        <div id="gradientBackground"></div>
-        <main id="root"></main>
-    </body>
+    <body id="root" class="main_darkTheme"></body>
 </html>
